--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,5 +1,5 @@
 :root {
-  background-color: #ecf5ff;
+  background-color: rgba(245, 236, 229);
   font-size: 62.5%;
 }
 
@@ -20,8 +20,9 @@ h4 {
 
 h1 {
   font-size: 5.4rem;
-  color: #56a5eb;
+  color: rgb(187, 107, 70);
   margin-bottom: 5rem;
+  font-family: Helvetica;
 }
 
 h1 > span {
@@ -85,19 +86,19 @@ h3 {
   padding: 1rem 0;
   width: 20rem;
   text-align: center;
-  border: 0.1rem solid #56a5eb;
   margin-bottom: 1rem;
   text-decoration: none;
-  color: #56a5eb;
+  color: rgb(200, 148, 100);
   background-color: white;
+  font
 }
 
 .btn:hover {
-  cursor: pointer;
-  box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
-  transform: translateY(-0.1rem);
-  transition: transform 150ms;
-}
+    cursor: pointer;
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(227, 188, 147, 0.5);
+    transform: translateY(-0.1rem);
+    transition: transform 150ms;
+  }
 
 .btn[disabled]:hover {
   cursor: not-allowed;
@@ -119,7 +120,7 @@ input {
   padding: 1.5rem;
   font-size: 1.8rem;
   border: none;
-  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+  box-shadow: 0 0.1rem 1.4rem 0 rgba(227, 188, 147, 0.5);
 }
 
 input::placeholder {
