--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -3,24 +3,24 @@
     margin-bottom: 0.5rem;
     width: 100%;
     font-size: 1.8rem;
-    border: 0.1rem solid rgb(86, 165, 235, 0.25);
     background-color: white;
   }
   
   .choice-container:hover {
     cursor: pointer;
-    box-shadow: 0 0.4rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+    box-shadow: 0 0.4rem 1.4rem 0 rgba(227, 188, 147, 0.5);
     transform: translateY(-0.1rem);
     transition: transform 150ms;
   }
   
   .choice-prefix {
     padding: 1.5rem 2.5rem;
-    background-color: #56a5eb;
+    background-color: rgba(200, 148, 100);
     color: white;
   }
   
   .choice-text {
+    color: rgba(187, 107, 70);;
     padding: 1.5rem;
     width: 100%;
   }
@@ -52,13 +52,13 @@
   #progressBar {
     width: 20rem;
     height: 4rem;
-    border: 0.3rem solid #56a5eb;
+    border: 0.3rem solid rgb(187, 107, 70);
     margin-top: 1.5rem;
   }
   
   #progressBarFull {
     height: 3.4rem;
-    background-color: #56a5eb;
+    background-color: rgb(187, 107, 70);
     width: 0%;
   }
   
@@ -66,7 +66,7 @@
   #loader {
     border: 1.6rem solid white;
     border-radius: 50%;
-    border-top: 1.6rem solid #56a5eb;
+    border-top: 1.6rem solid rgb(187, 107, 70);
     width: 12rem;
     height: 12rem;
     animation: spin 2s linear infinite;
